--- a/css/style.css
+++ b/css/style.css
@@ -6,25 +6,31 @@ form{
 	
 	border-radius: 5px;
 	line-height: 2rem;
-	width: 350px;
-	height: 200px; 
-	background: #f0f5f5 ;
+	width: 580px;
+	height: 340px; 
+	background: #f2f2f2 ;
 	padding-top: 20px;
 }
 .header{
 	color: grey;
-	padding-top: 8px;
-	font-size: 18px;
+	padding-top: 19px;
+	font-size: 24px;
+	padding-right:143px;
+	
+
 
 
 }
 .login{
 	background-color:#6666ff;
-	height: 25px;
+	height: 40px;
 	color: white;
-	margin-bottom: 10px;
+	margin-bottom:13px;
 	border: 1px;
-	width: 240px;
+	width: 390px;
+
+
+
 
 	
 }
@@ -34,16 +40,22 @@ form{
 
 }
 .Email{
-	width: 240px;
-    height: 20px;
-    padding-top:2 px;
+	width: 390px;
+    height: 35px;
+    padding-top:2px;
     font-size:13px;
+    margin-top:15px;
+    margin-bottom: 18px;
+    
+
 
 }
 .Password1{
-	width: 240px;
-	 height: 20px;
+	width: 390px;
+	 height: 35px;
 	 font-size:13px;
+	 margin-bottom: 18px;
+
 	 
 
 }
